rust/codec-latex/tests/snapshots/examples__island.coarse.encode.map.snap
---
source: rust/codec-latex/tests/examples.rs
expression: info.mapping
---
start     end        offsets   node_type+property                   authorship
     0     59        (0, 59)   RawBlock.content
     0     58        (0, -1)   RawBlock
    59    111       (59, 53)   RawBlock.content
    59    111         (0, 0)   RawBlock
   117    122       (58, 11)   CodeExpression.code
   111    123        (-6, 1)   CodeExpression
   111    123         (0, 0)   InlinesBlock.content
   111    123         (0, 0)   InlinesBlock
   123    162       (12, 39)   RawBlock.content
   123    161        (0, -1)   RawBlock
   176    182       (53, 21)   CodeChunk.code
   162    194      (-14, 12)   CodeChunk
   195    196        (33, 2)   RawBlock.content
   195    195        (0, -1)   RawBlock
    59    196      (-136, 1)   Island.content
    59    195        (0, -1)   Island
   196    233      (137, 38)   RawBlock.content
   196    232        (0, -1)   RawBlock
   233    266       (37, 34)   RawBlock.content
   233    265        (0, -1)   RawBlock
   233    266         (0, 1)   Island.content
   233    265        (0, -1)   Island
   266    282       (33, 17)   RawBlock.content
   266    282         (0, 0)   RawBlock
     0    282      (-266, 0)   Article.content
     0    282         (0, 0)   Article
