rust/codec-latex/tests/snapshots/examples__island.fine.json.snap
---
source: rust/codec-latex/tests/examples.rs
expression: article
---
{
  "type": "Article",
  "content": [
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "Before island."
          }
        }
      ]
    },
    {
      "type": "StyledBlock",
      "code": {
        "string": "island"
      },
      "content": [
        {
          "type": "Paragraph",
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "Within island. There can be inline code expression: "
              }
            },
            {
              "type": "CodeExpression",
              "code": {
                "string": "1 + 2"
              }
            },
            {
              "type": "Text",
              "value": {
                "string": "."
              }
            }
          ]
        },
        {
          "type": "Paragraph",
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "And there can be block code chunk:"
              }
            }
          ]
        },
        {
          "type": "CodeChunk",
          "code": {
            "string": "2 + 3"
          }
        }
      ]
    },
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "After island."
          }
        }
      ]
    },
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "Island with id"
          }
        }
      ]
    },
    {
      "type": "StyledBlock",
      "code": {
        "string": "island"
      },
      "content": [
        {
          "type": "Paragraph",
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "Within the island with table id."
              }
            }
          ]
        }
      ]
    },
    {
      "type": "StyledBlock",
      "code": {
        "string": "island"
      },
      "content": [
        {
          "type": "Paragraph",
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "Within the island with figure id."
              }
            }
          ]
        }
      ]
    },
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "Island with options"
          }
        }
      ]
    },
    {
      "type": "StyledBlock",
      "code": {
        "string": "island"
      },
      "content": [
        {
          "type": "Paragraph",
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "Within the island with options."
              }
            }
          ]
        }
      ]
    }
  ],
  "source": "rust/codec-latex/tests/examples/island.tex",
  "commit": "redacted"
}
