rust/codec-latex/tests/snapshots/examples__island.fine.tex.snap
---
source: rust/codec-latex/tests/examples.rs
expression: "&latex"
---
Before island.

Within island. There can be inline code expression: \expr{1 + 2}.

And there can be block code chunk:

\begin{lstlisting}
2 + 3
\end{lstlisting}

After island.

Island with options

Within the island with options.
